The pipe catches the 'galactic' + next word form audio file

--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "from transformers import AutoModelForSpeechSeq2Seq, AutoProcessor, pipeline\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -21,13 +22,6 @@
      "output_type": "stream",
      "text": [
       "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Command detected:  Engine 3, this is Bravo Team. We've got heavy smoke and flames visible from the Charlie side. We're going for a defensive attack, over. Galactic temperature. This is Bravo Team. Visibility's near zero, lots of heat. We're gonna hit Charlie hard from the exterior, then make entry from a primary search, over. Galactic battery. Galactic Battery. Keep an eye on that roof. Looks sketchy. Engine 3, better charge the hose. Over. Acknowledged. We've got a 2.5 inch line ready for a blitz attack. We'll knock down the bulk of the fire before we go in. Galactic Oxygen. Pass is active and we're staying on the comms. Going in for the attack now. Stay sharp out there. Over. Bravo going in. Over.\n"
      ]
     }
    ],
@@ -43,8 +37,15 @@
     ")\n",
     "model.to(device)\n",
     "\n",
-    "processor = AutoProcessor.from_pretrained(model_id)\n",
-    "\n",
+    "processor = AutoProcessor.from_pretrained(model_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pipe = pipeline(\n",
     "    \"automatic-speech-recognition\",\n",
     "    model=model,\n",
@@ -62,14 +63,17 @@
     "def detect_command(audio_sample):\n",
     "    # Perform automatic speech recognition\n",
     "    result = pipe(audio_sample)\n",
-    "    return result[\"text\"]\n",
-    "    \n",
-    "    # Your command detection logic here\n",
-    "    # Example: Check if the detected text contains a specific command\n",
-    "    # if \"command\" in text.lower():\n",
-    "    #     return True\n",
-    "    # else:\n",
-    "    #     return False\n",
+    "    detected_text = result[\"text\"].lower()\n",
+    "\n",
+    "    # Use regular expressions to find all occurrences of \"galactic\" followed by the next word\n",
+    "    matches = re.findall(r'\\bgalactic\\s+(\\w+)', detected_text)\n",
+    "\n",
+    "    # Print the matches\n",
+    "    for match in matches:\n",
+    "        print(\"galactic\", match)\n",
+    "\n",
+    "    # If \"galactic\" is not found, return None\n",
+    "    return None\n",
     "\n",
     "# Load example audio data\n",
     "audio_sample = \"audio_aaico_challenge.wav\"\n"
@@ -77,14 +81,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Command detected:  Engine 3, this is Bravo Team. We've got heavy smoke and flames visible from the Charlie side. We're going for a defensive attack, over. Galactic temperature. This is Bravo Team. Visibility's near zero, lots of heat. We're gonna hit Charlie hard from the exterior, then make entry from a primary search, over. Galactic battery. Galactic Battery. Keep an eye on that roof. Looks sketchy. Engine 3, better charge the hose. Over. Acknowledged. We've got a 2.5 inch line ready for a blitz attack. We'll knock down the bulk of the fire before we go in. Galactic Oxygen. Pass is active and we're staying on the comms. Going in for the attack now. Stay sharp out there. Over. Bravo going in. Over.\n"
+      "galactic temperature\n",
+      "galactic battery\n",
+      "galactic battery\n",
+      "galactic oxygen\n",
+      "Command detected: None\n"
      ]
     }
    ],
