Added english as default language in the pipe

--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,6 +57,7 @@
     "    return_timestamps=True,\n",
     "    torch_dtype=torch_dtype,\n",
     "    device=device,\n",
+    "    generate_kwargs={\"language\": \"english\"}\n",
     ")\n",
     "\n",
     "# Function to detect commands in audio\n",
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
