--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,21 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "f:\\Code Repos\\AAICO-Voice-Competition\\venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import librosa\n",
     "import numpy as np\n",
     "import time\n",
     "import threading\n",
     "import queue\n",
-    "import pickle"
+    "import pickle\n",
+    "\n",
+    "import fastdtw\n",
+    "import torch\n",
+    "from transformers import AutoModelForSpeechSeq2Seq, AutoProcessor, pipeline\n",
+    "from datasets import load_dataset\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +69,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Engine 3, this is Bravo Team. We've got heavy smoke and flames visible from the Charlie side. We're going for a defensive attack, over. Galactic temperature. This is Bravo Team. Visibility's near zero, lots of heat. We're gonna hit Charlie hard from the exterior, then make entry from a primary search, over. Galactic battery. Galactic Battery. Keep an eye on that roof. Looks sketchy. Engine 3, better charge the hose. Over. Acknowledged. We've got a 2.5 inch line ready for a blitz attack. We'll knock down the bulk of the fire before we go in. Galactic Oxygen. Pass is active and we're staying on the comms. Going in for the attack now. Stay sharp out there. Over. Bravo going in. Over.\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Loading model\n",
+    "device = \"cpu\"\n",
+    "torch_dtype = torch.float16 if torch.cuda.is_available() else torch.float32\n",
+    "\n",
+    "model_id = \"openai/whisper-large-v3\"\n",
+    "\n",
+    "model = AutoModelForSpeechSeq2Seq.from_pretrained(\n",
+    "    model_id, torch_dtype=torch_dtype, low_cpu_mem_usage=True, use_safetensors=True\n",
+    ")\n",
+    "model.to(device)\n",
+    "\n",
+    "processor = AutoProcessor.from_pretrained(model_id)\n",
+    "\n",
+    "pipe = pipeline(\n",
+    "    \"automatic-speech-recognition\",\n",
+    "    model=model,\n",
+    "    tokenizer=processor.tokenizer,\n",
+    "    feature_extractor=processor.feature_extractor,\n",
+    "    max_new_tokens=128,\n",
+    "    chunk_length_s=30,\n",
+    "    batch_size=16,\n",
+    "    return_timestamps=True,\n",
+    "    torch_dtype=torch_dtype,\n",
+    "    device=device,\n",
+    ")\n",
+    "\n",
+    "dataset = load_dataset(\"distil-whisper/librispeech_long\", \"clean\", split=\"validation\")\n",
+    "sample = dataset[0][\"audio\"]\n",
+    "\n",
+    "result = pipe(\"audio_aaico_challenge.wav\")\n",
+    "print(result[\"text\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,9 +170,9 @@
     "        time.sleep(frame_length / sample_rate) # Simulate real time\n",
     "        frame = audio_data_int16[list_samples_id]\n",
     "        \n",
-    "        if DEBUG:\n",
-    "            print(list_samples_id)\n",
-    "            print(frame)\n",
+    "        # if DEBUG:\n",
+    "        #     print(list_samples_id)\n",
+    "        #     print(frame)\n",
     "\n",
     "        buffer.put(frame)\n",
     "        notice_send_samples(list_samples_id)\n",
@@ -124,17 +192,21 @@
     "    start_event.wait()\n",
     "    print('Start processing')\n",
     "    while i != number_of_frames:\n",
-    "        frame = buffer.get()\n",
-    "        ### TODO: YOUR CODE\n",
-    "        # MODIFY\n",
-    "        list_samples_id = np.arange(i*frame_length, (i+1)*frame_length)\n",
-    "        labels = [1 for _ in range(len(list_samples_id))]\n",
-    "        ###\n",
-    "\n",
-    "        label_samples(list_samples_id, labels)\n",
+    "        start_time = time.time()\n",
+    "        frame = buffer.get() \n",
+    "        \n",
+    "        result = pipe(frame)\n",
+    "        # list_samples_id = np.arange(i*frame_length, (i+1)*frame_length)\n",
+    "        # labels = [1 for _ in range(len(list_samples_id))]\n",
+    "        # label_samples(list_samples_id, labels)\n",
+    "        \n",
     "        i += 1\n",
+    "        end_time = time.time()\n",
+    "        duration = (end_time - start_time) / 1000 # convert s to ms\n",
+    "        \n",
+    "        print(\"Processed Frame: {} | Result: {} | Time Taken: {}\".format(i, result[\"text\"], duration))\n",
+    "        \n",
     "    print('Stop processing')\n",
-    "    \n",
     "    # Save the list to a file\n",
     "    with open('results.pkl', 'wb') as file:\n",
     "        pickle.dump(results, file)\n"
@@ -142,26 +214,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Start emitting\n",
       "Start processing\n",
+      "Processed Frame: 1 | Result:  Продолжение следует... | Time Taken: 0.011759534120559693\n",
+      "Processed Frame: 2 | Result:  Subtitles by the Amara.org community | Time Taken: 0.012067009449005127\n",
+      "Processed Frame: 3 | Result:  Thank you. | Time Taken: 0.010975581645965576\n",
+      "Processed Frame: 4 | Result:  Thank you. | Time Taken: 0.010955400228500367\n",
+      "Processed Frame: 5 | Result:  Thank you. | Time Taken: 0.011103220462799072\n",
       "Stop emitting\n",
-      "Stop processing\n"
+      "Processed Frame: 6 | Result:  Thank you. | Time Taken: 0.011428686857223511\n",
+      "Processed Frame: 7 | Result:  Thank you. | Time Taken: 0.01116071367263794\n",
+      "Processed Frame: 8 | Result:  Takk for ating medietekst. | Time Taken: 0.01226189351081848\n",
+      "Processed Frame: 9 | Result:  I'm sorry. | Time Taken: 0.011101377725601196\n"
      ]
     }
    ],
